<resources>
    <string name="app_name">RossTech</string>
    <string name="welcome_text">RossTech</string>
    <string name="business_button">Business Log in</string>
    <string name="customer_button">Customer Log in</string>
    <string name="customer_login">Please select your user id</string>
    <string name="activity_customer_login_title">Customer Log In</string>
    <string name="activity_new_customer_title">New Customer</string>
    <string name="all_customers_button">View All Customers</string>
    <string name="activity_add_payment_method">Add Payment Method</string>
    <string name="new_customer_button">Create Account</string>
    <string name="name">Enter Name</string>
    <string name="shop_name_text">Shop Name</string>
    <string name="create_button">Create</string>
    <string name="customer_added_toast">Customer Added!</string>
    <string name="payment_type">Payment Method</string>
    <string name="payment_limit">Limit</string>
    <string name="add__payment_method_button">Add Payment Method</string>
    <string name="new_shop_button">Register New Store</string>
    <string name="shop_analysis">Store</string>
    <string name="shop_profit">YTD Profit</string>
    <string name="shop_activity">Shop Analysis</string>
    <string name="create_shop_button">Create</string>
    <string name="all_shops_button">View All Shops</string>
    <string name="activity_shop">All Shops</string>
    <string name="activity_new_shop">New Shop</string>
    <string name="activity_add_stock">Add Stock</string>
    <string name="item_name">Item Name</string>
    <string name="item_brand">Item Brand</string>
    <string name="item_price">Item Price</string>
    <string name="add_to_stock">Add to Stock</string>
    <string name="back_to_shop">Back to Shops</string>
    <string name="new_shop_create">Please enter shop details below</string>
    <string name="stock_added_toast">Item added to stock</string>
    <string name="view_accounts_button">View Accounts</string>
    <string name="shop_online_button">Shop Online</string>
    <string name="activity_options">Customer Options</string>
    <string name="customer_accounts">Customer Accounts</string>
    <string name="card_type">Card Type</string>
    <string name="card_value">Card Value</string>
</resources>
