<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_shop_create"
        android:textSize="30dp"/>
    <!--android:fontFamily="casual"-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/shop_name_text"
            android:hint="@string/shop_name_text"
            android:textSize="30dp"
            android:layout_marginTop="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/create_shop_button"
            android:textSize="30dp"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_shop_button"/>
        <!--android:fontFamily="casual"/>-->



    </LinearLayout>

    <Button
        android:id="@+id/all_shops_button"
        android:textSize="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_shops_button"/>



</LinearLayout>