<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/welcome_text"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/business_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_button"/>

        <Button
            android:id="@+id/customer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_button"/>

    </LinearLayout>

</LinearLayout>