<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
        android:id="@+id/new_shop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_shop_button"/>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/shop_analysis"/>

    <TextView
        android:layout_marginLeft="140dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/shop_profit"/>
></LinearLayout>

    <ListView
        android:id="@+id/my_listview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ListView>

</LinearLayout>